* Separate underwater wall and ceiling switch objects into two slots each.
* Improve fly cheat collision.
* Add global events.
* Add fast speed for fly cheat by holding Sprint input action.
* Allow walking on slopes when wading in water (similar to quicksand).
* Allow player to pull certain levers with both hands when holding a flare.
* Port twin auto gun from TR3.
* Accurately rotate display sprites around their pivot.
* Slightly revise keyhole OCB to account for either keeping or losing the key:
  - Positive OCB - play anim number and keep key in inventory.
  - Negative OCB - play anim number and loose key in inventory.
  - OCB 0 - play default animation and loose the key in inventory
* Add speedometer to vehicles.
* Accurately rotate display sprites around the pivot defined by the align mode.
* Revise keyhole OCBs to account for keeping or losing keys:
  - Positive OCB: play anim number and keep key.
  - Negative OCB: play anim number and lose key.
  - OCB 0 - play default animation and lose key.

* Animation changes:
42
43
50
51
52
474
475
476
543

Lua API changes:
* Add Lara:GetInteractedMoveable() which returns currently interacted moveable by Lara.
* Add Moveable:SetStatus() to set the current status of the moveable.

Version 1.2
===========

* Fix burning torch not working properly if there are more than 256 objects in a level.
* Fix grenade and rocket projectiles smoke offset in certain directions.
* Fix projectiles flying through animating objects.
* Fix harpoon gun doing enormous damage on enemies.
* Fix train death animation.
* Fix various camera issues with unique death animations.
* Fix zipline not following correct trajectory.
* Fix TR1 wolf damage value inflicted on a close bite attack.
* Fix TR1 bear various original AI issues.
* Fix TR2 knife thrower AI.
* Fix TR2 doberman crashing the game when killed by explosive weapons.
* Fix random crashes when killing exploding enemies.
* Fix random crashes in battle with more than 8 enemies.