@@ -1,5 +1,6 @@
 #pragma once
 #include "Game/Hud/PickupSummary.h"
+#include "Game/Hud/Speedometer.h"
 #include "Game/Hud/StatusBars.h"
 #include "Game/Hud/TargetHighlighter.h"
 
@@ -13,6 +14,7 @@ namespace TEN::Hud
 		// Members
 		StatusBarsController		StatusBars		  = {};
 		PickupSummaryController		PickupSummary	  = {};
+		SpeedometerController		Speedometer		  = {};
 		TargetHighlighterController TargetHighlighter = {};
 
 		// Utilities
